# azure-pipelines-retentions-purger

./: .gitmodules  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: azure_devops.rs  config.rs  main.rs
